--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,17 @@
     android:orientation="vertical">
 
 
-    <com.example.commonlibrary.baseadapter.SuperRecyclerView
-        android:id="@+id/srcv_activity_main_display"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_activity_main_refresh"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_height="match_parent">
+        <com.example.commonlibrary.baseadapter.SuperRecyclerView
+            android:id="@+id/srcv_activity_main_display"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:loadMoreEnabled="true"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <LinearLayout
         android:id="@+id/ll_activity_main_bottom_container"
@@ -57,6 +63,15 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/iv_activity_main_bottom_previous"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_skip_previous_white_36dp" />
+            <ImageView
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:id="@+id/iv_activity_main_bottom_play"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -64,15 +79,6 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_play_white_36dp" />
 
-            <ImageView
-                android:id="@+id/iv_activity_main_bottom_previous"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_skip_previous_white_36dp" />
 
             <ImageView
                 android:id="@+id/iv_activity_main_bottom_next"
