--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,26 @@
-<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:sothree="http://schemas.android.com/apk/res-auto"
-android:id="@+id/slide_activity_main_container"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@color/base_color_text_grey"
-android:gravity="bottom"
-android:orientation="vertical"
-sothree:umanoDragView="@+id/fl_activity_main_bottom_container"
-sothree:umanoOverlay="false"
-sothree:umanoPanelHeight="60dp"
-sothree:umanoShadowHeight="5dp">
+<?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout
-    android:id="@+id/fl_activity_main_container"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/slide_activity_main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1" />
+    android:background="@color/base_color_text_grey"
+    android:gravity="bottom"
+    android:orientation="vertical"
+    sothree:umanoDragView="@+id/fl_activity_main_bottom_container"
+    sothree:umanoOverlay="false"
+    sothree:umanoPanelHeight="60dp"
+    sothree:umanoShadowHeight="5dp">
 
-<FrameLayout
-    android:id="@+id/fl_activity_main_bottom_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    <FrameLayout
+        android:id="@+id/fl_activity_main_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+    <FrameLayout
+        android:id="@+id/fl_activity_main_bottom_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
