--- a/app/src/main/res/layout/activity_rank_detail.xml
+++ b/app/src/main/res/layout/activity_rank_detail.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/refresh_fragment_main_refresh"
+        android:id="@+id/refresh_activity_rank_detail_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.example.commonlibrary.baseadapter.SuperRecyclerView
-            android:id="@+id/srcv_fragment_main_display"
+            android:id="@+id/srcv_activity_rank_detail_display"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:loadMoreEnabled="true" />
+            android:layout_height="match_parent" />
+
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
-
-
