--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/refresh_fragment_rank_refresh"
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.example.commonlibrary.baseadapter.SuperRecyclerView
-            android:id="@+id/srcv_fragment_rank_display"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+       <com.example.commonlibrary.baseadapter.SuperRecyclerView
+           app:refreshEnabled="false"
+           android:id="@+id/display"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"/>
 
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
