--- a/app/src/main/res/layout/fragment_bottom.xml
+++ b/app/src/main/res/layout/fragment_bottom.xml
@@ -1,17 +1,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rl_fragment_bottom_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/rl_fragment_bottom_container">
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/iv_fragment_bottom_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:scaleType="centerCrop"
+        android:visibility="invisible" />
 
 
     <com.example.commonlibrary.cusotomview.RoundAngleImageView
         android:id="@+id/riv_fragment_bottom_album"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
         android:src="@mipmap/ic_launcher"
         app:roundHeight="30dp"
         app:roundWidth="30dp" />
+
+
+    <com.example.cootek.newfastframe.lrc.LrcView
+        android:id="@+id/lv_fragment_bottom_lrc"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="70dp"
+        android:alpha="0"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -104,6 +122,7 @@
 
 
     <SeekBar
+
         android:id="@+id/sb_fragment_bottom_seek"
         style="@style/Widget.AppCompat.SeekBar"
         android:layout_width="match_parent"
