--- a/app/src/main/res/layout/fragment_bottom.xml
+++ b/app/src/main/res/layout/fragment_bottom.xml
@@ -46,6 +46,15 @@
             android:visibility="invisible" />
     </RelativeLayout>
 
+    <ImageView
+        android:id="@+id/iv_fragment_bottom_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:alpha="0"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
+        android:visibility="invisible" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
