--- a/app/src/main/res/layout/item_view_pop_window_fragment_bottom.xml
+++ b/app/src/main/res/layout/item_view_pop_window_fragment_bottom.xml
@@ -14,12 +14,24 @@
         app:roundHeight="20dp"
         app:roundWidth="20dp" />
 
+
+    <ImageView
+        android:id="@+id/iv_item_view_pop_window_fragment_bottom_artist_delete"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_delete_white_24dp" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/riv_item_view_pop_window_fragment_bottom_avatar"
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@+id/iv_item_view_pop_window_fragment_bottom_artist_delete"
+        android:layout_toRightOf="@id/riv_item_view_pop_window_fragment_bottom_avatar"
         android:orientation="vertical">
 
         <TextView
@@ -40,15 +52,6 @@
             android:maxLines="1"
             android:textColor="@color/base_color_text_grey" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_item_view_pop_window_fragment_bottom_artist_delete"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_delete_white_24dp" />
 
 
 </RelativeLayout>
