--- a/video/src/main/res/layout/fragment_bottom.xml
+++ b/video/src/main/res/layout/fragment_bottom.xml
@@ -46,7 +46,7 @@
             android:visibility="invisible" />
     </RelativeLayout>
 
-    <com.example.cootek.newfastframe.CommentLayout
+    <com.example.cootek.newfastframe.view.CommentLayout
         android:id="@+id/cl_fragment_bottom_comment_layout"
         android:layout_width="match_parent"
         android:layout_height="400dp"
