[feature] add a singer index

--- a/video/src/main/res/layout/view_activity_song_list_header_view.xml
+++ b/video/src/main/res/layout/view_activity_song_list_header_view.xml
@@ -2,18 +2,19 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp">
+
     <ImageView
         android:id="@+id/iv_view_activity_song_list_header_view_bg"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
     <ImageView
         android:id="@+id/iv_view_activity_song_list_header_view_image"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center"
         android:layout_width="150dp"
-        android:layout_height="150dp" />
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -25,9 +26,10 @@
             android:id="@+id/tv_view_activity_song_list_header_view_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="5"
             android:textColor="@color/base_color_text_blue"
             android:textSize="20sp" />
-
 
 
     </LinearLayout>
