--- a/video/src/main/res/layout/item_fragment_song_list.xml
+++ b/video/src/main/res/layout/item_fragment_song_list.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="30dp"
+    android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/tv_item_fragment_song_list_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="20dp"/>
-
+        android:layout_marginLeft="20dp"
+        android:ellipsize="end"
+        android:maxLines="1" />
 
 
 </LinearLayout>
