--- a/video/src/main/res/layout/video_activity_main.xml
+++ b/video/src/main/res/layout/video_activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/item_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:tag="skin">
 
     <FrameLayout
         android:id="@+id/fl_activity_main_container"
