--- a/video/src/main/res/layout/fragment_bottom.xml
+++ b/video/src/main/res/layout/fragment_bottom.xml
@@ -18,6 +18,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="7.5dp"
+        android:scaleType="fitCenter"
         android:src="@mipmap/ic_launcher"
         app:roundHeight="25dp"
         app:roundWidth="25dp" />
@@ -47,19 +48,18 @@
     </RelativeLayout>
 
 
-
     <TextView
         android:id="@+id/tv_fragment_bottom_comment"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:alpha="0"
+        android:background="@drawable/selector_fragment_bottom_comment"
+        android:gravity="center"
         android:scaleType="centerCrop"
         android:text="弹"
-        android:gravity="center"
-        android:textSize="12sp"
-        android:visibility="invisible"
         android:textColor="@color/base_color_text_white"
-        android:background="@drawable/selector_fragment_bottom_comment"/>
+        android:textSize="12sp"
+        android:visibility="invisible" />
 
     <ImageView
         android:id="@+id/iv_fragment_bottom_back"
@@ -73,9 +73,11 @@
         android:visibility="invisible" />
 
     <LinearLayout
+        android:id="@+id/ll_fragment_bottom_name_container"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="80dp"
+        android:layout_marginRight="160dp"
         android:orientation="vertical"
         android:paddingTop="10dp">
 
@@ -110,54 +112,60 @@
 
         <ImageView
             android:id="@+id/iv_fragment_bottom_next"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:scaleType="fitCenter"
+            android:background="@drawable/custom_drawable_circle_bg"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_skip_next_black_24dp" />
 
         <ImageView
             android:id="@+id/iv_fragment_bottom_play"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
             android:layout_toLeftOf="@+id/iv_fragment_bottom_next"
-            android:scaleType="fitCenter"
+            android:background="@drawable/custom_drawable_circle_bg"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_play_arrow_black_24dp" />
 
         <ImageView
             android:id="@+id/iv_fragment_bottom_previous"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
             android:layout_toLeftOf="@+id/iv_fragment_bottom_play"
-            android:scaleType="fitCenter"
+            android:background="@drawable/custom_drawable_circle_bg"
+            android:scaleType="centerInside"
+
             android:src="@drawable/ic_skip_previous_black_24dp" />
 
         <ImageView
             android:id="@+id/iv_fragment_bottom_mode"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
             android:layout_toLeftOf="@+id/iv_fragment_bottom_previous"
             android:alpha="0"
-            android:scaleType="fitCenter"
+            android:background="@drawable/custom_drawable_circle_bg"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_compare_arrows_white_24dp"
             android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/iv_fragment_bottom_list"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
             android:layout_toRightOf="@+id/iv_fragment_bottom_next"
             android:alpha="0"
-            android:scaleType="fitCenter"
+            android:background="@drawable/custom_drawable_circle_bg"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_queue_music_black_24dp" />
     </RelativeLayout>
 
@@ -174,6 +182,8 @@
             android:layout_height="wrap_content"
             android:alpha="0"
             android:text="05:30:00"
+            android:textColor="?attr/custom_attr_btn_text"
+            android:textSize="12sp"
             android:visibility="gone" />
 
         <SeekBar
@@ -197,6 +207,8 @@
             android:layout_height="wrap_content"
             android:alpha="0"
             android:text="05:30:00"
+            android:textColor="?attr/custom_attr_btn_text"
+            android:textSize="12sp"
             android:visibility="gone" />
     </LinearLayout>
 
