--- a/video/src/main/res/layout/fragment_holder.xml
+++ b/video/src/main/res/layout/fragment_holder.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/custom_attr_app_bg"
+    android:orientation="vertical"
+    android:tag="skin">
+
     <android.support.design.widget.TabLayout
+        android:id="@+id/tb_fragment_holder_tab"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/tb_fragment_holder_tab"/>
+        android:background="?attr/custom_attr_app_title_bg"
+        app:tabSelectedTextColor="?attr/custom_attr_title_main_selected"
+        app:tabTextColor="?attr/custom_attr_title_main_normal" />
+
     <android.support.v4.view.ViewPager
+        android:id="@+id/vp_fragment_holder_display"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/vp_fragment_holder_display"/>
+        android:background="?attr/custom_attr_app_content_bg" />
 
 </LinearLayout>
