--- a/video/src/main/res/layout/video_activity_main.xml
+++ b/video/src/main/res/layout/video_activity_main.xml
@@ -2,9 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/item_bg"
-    android:orientation="vertical"
-    android:tag="skin">
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/fl_activity_main_container"
@@ -12,10 +10,3 @@
         android:layout_height="match_parent" />
 </LinearLayout>
 
-
-    <!--<com.example.cootek.newfastframe.slidingpanel.SlidingPanelLayout--><!--xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:id="@+id/slide_panel_activity_main_containe"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="@color/base_color_text_grey"--><!--android:gravity="bottom"--><!--android:orientation="vertical"--><!--app:umanoDragView="@+id/fl_activity_main_bottom_container"--><!--app:umanoOverlay="false"--><!--app:umanoPanelHeight="60dp"--><!--app:umanoShadowHeight="5dp">-->
-
-    <!--<FrameLayout--><!--android:id="@+id/fl_activity_main_container"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent" />-->
-
-
-    <!--<FrameLayout--><!--android:id="@+id/fl_activity_main_bottom_container"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent" />--><!--</com.example.cootek.newfastframe.slidingpanel.SlidingPanelLayout>-->
