--- a/video/src/main/res/layout/view_music_content.xml
+++ b/video/src/main/res/layout/view_music_content.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.example.cootek.newfastframe.slidingpanel.SlidingPanelLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.cootek.newfastframe.slidingpanel.SlidingPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sl_view_music_content_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/base_color_text_grey"
+    android:background="?attr/custom_attr_app_bg"
     android:gravity="bottom"
     android:orientation="vertical"
     app:umanoDragView="@+id/fl_view_music_content_bottom"
@@ -18,5 +17,6 @@
     <FrameLayout
         android:id="@+id/fl_view_music_content_bottom"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="?attr/custom_attr_app_content_bg" />
 </com.example.cootek.newfastframe.slidingpanel.SlidingPanelLayout>
